# solitaire

./: CMakeLists.txt  build.sh  configure.sh
src/: CMakeLists.txt  game.cpp  main.cpp
